--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,27 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "fi_hello (client)",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Debug/fi_hello",
+            "args": ["fe80::dd:fff:fe42:8149"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "debug-build",
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
             "name": "fi_rdm_tagged_bw (server)",
             "type": "cppdbg",
             "request": "launch",
